# shadow-cast

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.versioning/: version-update
.versioning/changes/: 1Y73bS2GJt.patch.md  393VMmkUWr.minor.md  4tRZD8IXtp.minor.md  ABD4J08NAE.patch.md  DgYJuQAr9O.patch.md  DyxXCHexJS.minor.md  F3oCxi3g1O.patch.md  FW7EZ92NGy.minor.md  HkssZKsWhD.patch.md  KlqMy7e94g.patch.md  LRSQqkg6f8.patch.md  QBUf5HunAv.minor.md  S9GbUeHXdB.minor.md  UaFV3jPgO3.minor.md  W3KePUgugT.minor.md  XRQoXRs5ej.minor.md  a0BeZgsmuY.patch.md  cB63FxBNOb.minor.md  fDytaqESBG.patch.md  gRXSJ0T8eu.patch.md  hteiljos7O.minor.md  iumKuGkipV.minor.md  nBpZUnmkTX.patch.md  qz3SfuZKgk.minor.md  r5eVh9AAbK.minor.md  tDzfsWLvKj.patch.md  uFXfE5SgAN.patch.md  uYSmfoSpCI.minor.md  wekMseGz7z.patch.md  zI6NPscHl5.minor.md
cmake/: CPPCheck.cmake  Dependencies.cmake  EmbeddedGLSLTarget.cmake  FindDRM.cmake  FindFFMpeg.cmake  FindPipewire.cmake  MakeTest.cmake
doc/: architecture.md  faq.md  performance.md
doc/data/: ghostrunner.mp4.metrics
experimental/: CMakeLists.txt  allocate_unique.hpp  any_video_capture.hpp  arena.cpp  arena.hpp  audio_capture.cpp  audio_capture.hpp  audio_encoder_sink.cpp  audio_encoder_sink.hpp  capture.cpp  capture.hpp  capture_pipeline.hpp  capture_sink.hpp  capture_source.hpp  config.hpp.in  cpu_usage.hpp  desktop.cpp  drm_cuda_capture_source.cpp  drm_cuda_capture_source.hpp  egl.cpp  egl.hpp  frame_capture.hpp  frame_capture_loop.hpp  gpu.cpp  gpu.hpp  gpu_traits.hpp  logging.cpp  main.cpp  media_container.cpp  media_container.hpp  nvenc_encoder_sink.cpp  nvenc_encoder_sink.hpp  nvfbc_capture.cpp  nvfbc_capture.hpp  nvfbc_capture_source.cpp  nvfbc_capture_source.hpp  nvfbc_gpu.cpp  nvfbc_gpu.hpp  nvidia_gpu.cpp  pipewire_capture_source.cpp  (+13 more)
experimental_tests/: CMakeLists.txt  capture_frame_tests.cpp  non_pointer_unique_ptr_tests.cpp  wayland_desktop_tests.cpp
legacy/: CMakeLists.txt  logging.cpp  logging.hpp  main.cpp  shadow_cast.hpp
legacy/handlers/: audio_chunk_writer.hpp  drm_video_frame_writer.hpp  video_frame_writer.cpp
legacy/services/: context.cpp  context.hpp  drm_video_service.cpp  drm_video_service.hpp  encoder.hpp  encoder_service.cpp  encoder_service.hpp  readiness.cpp  service.cpp  service.hpp  signal_service.hpp
src/: CMakeLists.txt  any_video_capture.hpp  audio_capture_loop_operation.hpp  audio_encoder_sink.cpp  audio_encoder_sink.hpp  audio_service.cpp  audio_service.hpp  av.hpp  capture.hpp  codec.cpp  codec.hpp  color_converter.cpp  color_converter.hpp  config.hpp.in  context.cpp  context.hpp  cpu_usage.cpp  cuda.cpp  cuda.hpp  desktop.cpp  desktop.hpp  display.hpp  drm.hpp  drm_cuda_capture_source.cpp  drm_cuda_capture_source.hpp  elapsed.cpp  elapsed.hpp  error.cpp  error.hpp  format.cpp  format.hpp  frame.cpp  frame.hpp  gpu.cpp  gpu.hpp  handlers.hpp  io.hpp  kms.cpp  logging.hpp  main.cpp  (+39 more)
src/av/: buffer.cpp  buffer.hpp  buffer_pool.cpp  buffer_pool.hpp  codec.cpp  codec.hpp  format.cpp  format.hpp  frame.cpp  frame.hpp  fwd.hpp  media_chunk.cpp  media_chunk.hpp  packet.cpp  packet.hpp  sample_format.cpp  sample_format.hpp
src/display/: display.cpp  display.hpp
src/drm/: messaging.cpp  messaging.hpp  planes.cpp  planes.hpp
src/gl/: buffer.cpp  buffer.hpp  core.cpp  core.hpp  error.cpp  error.hpp  framebuffer.cpp  framebuffer.hpp  gl.hpp  object.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array_object.cpp  vertex_array_object.hpp
src/glsl/: CMakeLists.txt  default_fragment.glsl  default_vertex.glsl  mouse_fragment.glsl  mouse_vertex.glsl
src/handlers/: audio_chunk_writer.cpp  audio_chunk_writer.hpp  drm_video_frame_writer.cpp  drm_video_frame_writer.hpp  stream_finalizer.cpp  stream_finalizer.hpp  video_frame_writer.cpp  video_frame_writer.hpp
src/io/: accept_handler.cpp  accept_handler.hpp  message_handler.hpp  message_receiver.cpp  message_receiver.hpp  message_sender.cpp  message_sender.hpp  process.cpp  process.hpp  signals.cpp  signals.hpp  unix_socket.cpp  unix_socket.hpp
src/metrics/: formatting.hpp  histogram.hpp  metrics.cpp  metrics.hpp  profiling.cpp  profiling.hpp
src/nvidia/: cuda.hpp
src/platform/: capture.cpp  capture.hpp  display.cpp  display.hpp  egl.cpp  egl.hpp  gl.cpp  gl.hpp  gpu.cpp  gpu.hpp  opengl.cpp  opengl.hpp  wayland.cpp  wayland.hpp
src/services/: audio_service.cpp  audio_service.hpp  color_converter.cpp  color_converter.hpp  context.cpp  context.hpp  drm_video_service.cpp  drm_video_service.hpp  encoder.cpp  encoder_service.cpp  encoder_service.hpp  metrics_service.cpp  metrics_service.hpp  service.cpp  service.hpp  signal_service.cpp  signal_service.hpp  video_service.cpp  video_service.hpp
src/utils/: base64.cpp  base64.hpp  borrowed_ptr.hpp  cmd_line.cpp  cmd_line.hpp  contracts.cpp  contracts.hpp  elapsed.cpp  elapsed.hpp  frame_time.cpp  frame_time.hpp  intrusive_list.hpp  non_pointer.hpp  overloads.hpp  pool.hpp  result.cpp  scope_guard.hpp  symbol.hpp
tests/: CMakeLists.txt  base64_tests.cpp  cmd_line_tests.cpp  gl_buffer_tests.cpp  gl_error_tests.cpp  gl_render_to_texture_test.cpp  gl_shader_tests.cpp  gl_texture_tests.cpp  histogram_tests.cpp  intrusive_list_tests.cpp  nvidia_tests.cpp  pool_tests.cpp  testing.cpp  testing.hpp
tests/data/: cyberpunk-girl-rgb-640x640.rgb
tests/glsl/: CMakeLists.txt  flipped_y_vertex.glsl  identity_fragment.glsl  textured_brightness_fragment.glsl  textured_vertex.glsl
tools/: add-version-change  install-helper.sh.in  make-dist  next-version  performance-report  rollup-version-changes
tools/metrics/: average  percentile  plot
