configure_file(
    config.hpp.in
    ${CMAKE_CURRENT_BINARY_DIR}/config.hpp
)

add_executable(shadowcast)
target_sources(
    shadowcast
    PUBLIC
        #nvfbc_gpu.cpp
        audio_capture.cpp
        audio_encoder_sink.cpp
        capture.cpp
        "$<$<BOOL:SHADOW_CAST_ENABLE_HISTOGRAMS>:${CMAKE_CURRENT_SOURCE_DIR}/cpu_usage.cpp>"
        cuda.cpp
        desktop.cpp
        drm_cuda_capture_source.cpp
        gpu.cpp
        logging.cpp
        main.cpp
        media_container.cpp
        nvenc_encoder_sink.cpp
        nvfbc.cpp
        nvfbc_capture.cpp
        nvfbc_capture_source.cpp
        nvidia_gpu.cpp
        pipewire_capture_source.cpp
        session.cpp
        sticky_cancel_event.cpp
        sticky_cancel_timer.cpp
        x11_desktop.cpp
        x11_platform.cpp
        wayland_desktop.cpp
)

target_include_directories(shadowcast
    PUBLIC
    ${CMAKE_CURRENT_BINARY_DIR}
)

target_link_libraries(
    shadowcast
    PUBLIC
    embedded_glsl
    shadow-cast-obj
    Exios::exios
    Pipewire::pipewire
    FFMpeg::avcodec
    FFMpeg::avdevice
    FFMpeg::avfilter
    FFMpeg::avformat
    FFMpeg::avutil
    FFMpeg::swresample
    FFMpeg::swscale
    pthread
    X11::X11
    wayland-client
    wayland-egl
)
